# ha-whatsapp

./: .gitignore  EXAMPLES.md  LICENSE  README.md  check_ha.py  check_imports.py  hacs.json  pyproject.toml  renovate.json
.github/: labeler.yml  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_addon.yml  config.yml  feature_request.yml
.github/scripts/: calculate_release_details.py  update_templates.py
.github/workflows/: auto-merge.yml  build.yml  ci-orchestrator.yml  cleanup.yml  hacs.yml  issue-orchestrator.yml  labeler.yml  link-checker.yaml  lint.yml  nightly.yml  pr-assistant.yml  release.yml  test.yml
custom_components/ha_whatsapp/: __init__.py  api.py  config_flow.py  const.py  manifest.json  types.py
custom_components/whatsapp/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  info.md  manifest.json  notify.py  repairs.py  sensor.py  services.yaml  strings.json  types.py
custom_components/whatsapp/translations/: de.json  en.json  ru.json
docs/: DEVELOPMENT.md  EVENTS.md  SERVICES.md  SETUP.md  WHITELIST.md  _config.yml  api.md  architecture.md  automations.md  beta.md  buttons.md  configuration.md  features.md  index.md  installation.md  limitations.md  quoting.md  rocketchat.md  support.md  tips.md  troubleshooting.md  webhooks.md
docs/_includes/: head_custom.html
docs/assets/css/: custom.scss
scripts/: update_backends.py
tests/: conftest.py  ha_stubs.py  test_binary_sensor.py  test_config_flow.py  test_connection.py  test_diagnostics.py  test_docs.py  test_expiration.py  test_init.py  test_interaction.py  test_interactive_backend.py  test_jid_normalization.py  test_mark_as_read.py  test_multi_instance.py  test_notifications.py  test_passkey.py  test_quoting.py  test_rate_limit.py  test_repairs.py  test_sanity.py  test_sensor.py  test_services.py  test_services_extended.py  test_translations.py  test_verify_document.py  verify_contact.py  verify_document.py  verify_formatting.py  verify_list.py  verify_media.py  verify_modify.py  verify_webhook.py
