[tool.poetry]
name = "ha-whatsapp"
version = "0.0.1"
description = "Home Assistant WhatsApp Integration"
authors = ["FaserF"]
readme = "README.md"
packages = [{include = "custom_components"}]

[tool.poetry.dependencies]
python = "^3.12"
# Add actual dependencies here

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-homeassistant-custom-component = "^0.13"
ruff = "^0.14.0"
mypy = "^1.0"
black = "^26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "ARG"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
